# projection

./: .gitignore  LICENSE  README.md  mix.exs
docs/: hooks.md
lib/: projection_ui.ex
lib/mix/tasks/: projection.codegen.ex
lib/mix/tasks/compile/: projection_codegen.ex  projection_ui_host.ex
lib/projection/: session.ex
lib/projection/ui/: app_shell.slint
lib/projection_ui/: app_state.ex  async_result.ex  live_component.ex  schema.ex  screen.ex  state.ex
lib/projection_ui/runtime/: host_bridge.ex  session_supervisor.ex
projection_new/priv/templates/projection.new/: README.md.eex
projection_new/priv/templates/projection.new/slint/ui_host/: Cargo.toml
projection_new/test/: projection_new_test.exs
slint/ui_host/: .gitignore  Cargo.toml  build.rs
slint/ui_host/src/: main.rs
slint/ui_host/src/hooks/: mod.rs
slint/ui_host_codegen/: Cargo.toml
slint/ui_host_codegen/src/: lib.rs
slint/ui_host_macros/: Cargo.toml
slint/ui_host_macros/src/: lib.rs
slint/ui_host_runtime/: Cargo.toml
slint/ui_host_runtime/src/: lib.rs  protocol.rs
test/projection/: compile_projection_codegen_task_test.exs  compile_projection_ui_host_task_test.exs  schema_test.exs  session_router_test.exs
test_support/: codegen_test_helpers.ex  test_fixtures.ex
