[package]
name = "projection_ui_host_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
projection_ui_host_macros = { path = "../ui_host_macros" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "=1.16.0", default-features = false, features = ["std", "compat-1-2"] }
